# rmf_tool

./:  requirements.txt    .gitignore  Example_bikeSharingSystem.ipynb  Example_nonStableSIR.ipynb  README.md  setup.cfg  setup.py  test_drift_derivatives.py  test_transient.py  test_twoChoice.py
examples/: BasicExample_SIR.ipynb  Example_2choice.ipynb  Example_bikeSharingSystem.ipynb  Example_nonStableSIR.ipynb
misc/SIR_simulate/traj/: trajN50a0.6.npz
misc/jsqD_simulate/: average_valueJSQ.py  test.py
misc/jsqD_simulate/traj/: averageTraj_N10_d2_r90_init28_var.npz  averageTraj_N10_d2_r91_init28.npz  averageTraj_N10_d2_r95_init35_var.npz
src/: heterogeneous_rmf_tool.py  rmf_tool.py
tests/: approximately_equal.py  test_cache.py  test_drift_derivatives.py  test_transient.py  test_twoChoice.py
tests/output_tests/: cache.pickle  drift_derivatives.pickle  test_transient.pickle
