[metadata]
name = rmf_tool 
version = 0.3
description = A library to Compute (Refined) Mean Field Approximations
long_description = file: README.md
long_description_content_type = text/markdown
author = Nicolas Gast
author_email = nicolas.gast@inria.fr
url= https://github.com/ngast/rmf_tool
project_urls = 
    Bug Tracker = https://github.com/ngast/rmf_tool/issues
classifiers=[
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   License :: OSI Approved :: MIT License

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6


[options.packages.find]
where = src